bin/edu/itsco/Parser.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options{  static = true;}PARSER_BEGIN(Parser)package edu.itsco;

import java.util.ArrayList;

public class Parser{

  private static ArrayList <Variable> listaVariables;

    public static void main(String args [])   {
 
    listaVariables = new ArrayList<Variable>();    Parser parser = new Parser(System.in);
    try { 
    	System.out.println("Bienvenidos al Compilador (Español)");
    	parser.gramaticaPrincipal();
    	System.out.println("Compilo Correctamente");
  }catch(ParseException pex) {
    System.err.println(pex.getMessage());
  }catch(Excepciones es) {
    System.err.println(es.getMessage());
  }     }

  private static boolean existeVariable(Variable variable) {
    return listaVariables.contains(variable);
  }

  private static void agregarVariable(Variable variable)
    throws Excepciones { 
    if(!existeVariable(variable)) {
      listaVariables.add(variable);
    }else {
      throw new Excepciones(variable,
      Excepciones.Tipo.Variables_Duplicadas);
    }
  }

  private static void variableDefinida(Variable variable)
  throws Excepciones{
    if(!existeVariable(variable)) {
      throw new Excepciones(variable,
      Excepciones.Tipo.Variables_Duplicadas);
    }
  }

  private static void variableInicializada(Variable variable)
  throws Excepciones {
   //obtener la variable de la lista(referencia)
   int index = listaVariables.indexOf(variable);
   variable = listaVariables.get(index);
   if(!variable.isInicializada()) {
     throw new Excepciones(variable,
     Excepciones.Tipo.Variables_no_Inicializadas);    }
 }
 
}PARSER_END(Parser)SKIP :{  " "| "\r"| "\t"| "\n"}
//Palabras Reservadas
TOKEN: {
 < ANN: "ann" >
| < GILBERT: "gilbert" >
| < MARILLA: "marilla" >

| < JERRY: "jerry" >
| < COOL: "cool" >

| < BASH: "bash" >
| < DIANA: "diana" >

| < RUBY: "ruby" >
| < WILLIAM: "william" >
| < BILLY: "billy" >
| < GREEN: "geen" >

| < MAY: "may" >

| < ELIZA: "eliza" >
| < RACHEL: "rachel" >

| < COMENZAR: "comenzar" >
}

//Simbolos y Operadores
TOKEN: {
 < SUMA: "+" >
| < RESTA: "-" >
| < MULTIPLICACION: "*" >
| < DIVISION: "/" >
| < RESIDUO: "%" >
| < IGUAL: "=" >

| < AND: "&&" >
| < OR: "||" >
| < NOT: "!" >

| < MAYOR: ">" >
| < MENOR: "<" >

| < AP: "(" >
| < CP: ")" >

| < ALL: "{" >
| < CLL: "}" >

| < PC: ";" >
| < PP: ":" >
}

//Tokens Dinamicos
TOKEN: {
< #digitos: ["0" - "9"] >
| < #letras: ["a"-"z","A"-"Z"] >
| < ID: (<letras>|"_")(<letras>|<digitos>|"_")* >

| < VALOR_ANN: (<digitos>)+ >
| < VALOR_GILBERT: (<digitos>)+"."(<digitos>)+ >
| < VALOR_MARILLA: "\"" (~["\""])+ "\"" >
}
void gramaticaPrincipal() throws Excepciones: 
{
  
} { 
  <COMENZAR> <ID> <ALL>
  gramaticaSentencias()
  < CLL>}

void gramaticaSentencias() throws Excepciones: {
} {
  (
    gramaticaDeclararVariable()
  | gramaticaCapturar()
  | gramaticaImprimir()
  | gramaticaSi()
  | gramaticaMientras()
  | gramaticaHacerMientras()
  | gramaticaCambiar()
  | gramaticaAsignacion()
  | gramaticaPara()
  )+
 }

void gramaticaDeclararVariable()throws Excepciones: {
  Token id;
  Token tipoDato;
} {
  tipoDato = tipoDato() id = <ID>
  {
    Variable v = new Variable(id.image,tipoDato.image);
  }
   [ <IGUAL> valor()
     { v.setInicializada(true); } 
   ]
   { agregarVariable(v);}
    < PC>
}

Token tipoDato(): {
  Token tipoDato;
} {
  (    tipoDato = < ANN >
    | tipoDato = < GILBERT >
    | tipoDato = < MARILLA >
  )
  { return tipoDato; }
}

void valor () throws Excepciones: {
  Token id;
} {
  (
    < VALOR_ANN >
    | < VALOR_GILBERT >
    | < VALOR_MARILLA>
    | id = < ID >
    {
     Variable v = new Variable();
     v.setId(id.image);
     variableDefinida(v);
     variableInicializada(v);
   }
   )
}

void gramaticaCapturar () throws Excepciones: {
  Token id;
} {
   < COOL > < AP > id = < ID >
   < CP > < PC >
   {
     Variable v = new Variable();
     v.setId(id.image);
     variableDefinida(v);
     int index = listaVariables.indexOf(v);
     //System.out.println(index);
     listaVariables.get(index).setInicializada(true);
     //System.out.println(listaVariables.get(index).isInicializada());
   }
 }

void gramaticaImprimir () throws Excepciones: {
} {
    < JERRY > < AP > valor()
          ( < SUMA > valor() )*    < CP > < PC >
}

void gramaticaSi() throws Excepciones: {
} {
   < BASH > < AP > condicion() < CP >
   < ALL >
       gramaticaSentencias()
   < CLL >
   [< DIANA > < ALL>
       gramaticaSentencias()
       < CLL >]
}

void condicion () throws Excepciones: {
} {
   evaluacionSimple() (opLogico() evaluacionSimple())*
 }

void evaluacionSimple() throws Excepciones: {
} {
   valor() opRelacional () valor()
 }

void opRelacional(): {
} {
    < MAYOR > [< IGUAL >]
  | < MENOR > [< IGUAL >]
  | < NOT > < IGUAL >
  | < IGUAL > < IGUAL >
}

void opLogico(): {
} {
   < AND > | < OR >
 }

void gramaticaMientras()throws Excepciones: {
} {
   < ELIZA > < AP > condicion() < CP >
   < ALL >
     gramaticaSentencias()
   < CLL >
 }

void gramaticaHacerMientras()throws Excepciones: {
} {
   < RACHEL > < ALL >
      gramaticaSentencias()
   < CLL > < ELIZA > < AP > condicion() < CP > < PC >
 }

void gramaticaCambiar()throws Excepciones: {
  Token id;
} {
   < RUBY > < AP > id =  < ID > < CP >
   < ALL >
 
   (     < WILLIAM > < VALOR_ANN > < PP > gramaticaSentencias()
     < BILLY > < PC >
   )+

   [ < GREEN > gramaticaSentencias() [< BILLY > < PC >] ]
   < CLL >
   { 
     Variable v = new Variable();
     v.setId(id.image);
     variableDefinida(v);
     variableInicializada(v);
     }
 }

void gramaticaAsignacion () throws Excepciones: {
  Token id;
}{
  
   id = < ID > < IGUAL > operacionSimple ()<PC>
   {
     Variable v = new Variable();
     v.setId(id.image);
     variableDefinida(v);
     //
     int index = listaVariables.indexOf(v);
     listaVariables.get(index).setInicializada(true);
   }
 }

void operacionSimple() throws Excepciones: {
} {

   (
     valor() | operacionParentesis()
   )
   ( operadorAritmetico()
     (valor() | operacionParentesis()) )*
  }

void operacionParentesis()throws Excepciones: {
} {
   < AP > operacionSimple() < CP >
 }

void operadorAritmetico(): {
} {

   < SUMA > | < RESTA > | < MULTIPLICACION > | < DIVISION >| < RESIDUO >
 }

void gramaticaPara()throws Excepciones: {
  Token id;
} {
  
     < MAY > < AP > id= < ID > < IGUAL > valor() < PC > condicion () < PC >
     < ID > (
       < SUMA > < SUMA >
       | < RESTA > < RESTA >
       | < IGUAL > operacionSimple()
     ) < CP >
     < ALL >
         gramaticaSentencias()
     < CLL >
     { 
     Variable v = new Variable();
     v.setId(id.image);
     variableDefinida(v);
     variableInicializada(v);
     }
 }            

   
    
